--- a/services/frontend/EPIC-API-001-minirag-demo-ui/public/index.html
+++ b/services/frontend/EPIC-API-001-minirag-demo-ui/public/index.html
@@ -47,6 +47,16 @@
             />
             <button type="submit" class="primary" data-testid="search-button">検索</button>
           </form>
+          <div class="sample-queries">
+            <div class="sample-queries__title">サンプルクエリ</div>
+            <ul class="sample-queries__list">
+              <li>APAC 調達 2026 供給網</li>
+              <li>サプライヤー監査 CO2 報告</li>
+              <li>ローカル調達率 LCR 向上</li>
+              <li>サプライチェーン リスク 代替拠点</li>
+              <li>e-Procurement 支払い 電子化</li>
+            </ul>
+          </div>
         </section>
 
         <section class="panel panel--controls">
