--- a/services/avatar-ui/app/src/renderer/index.html
+++ b/services/avatar-ui/app/src/renderer/index.html
@@ -28,6 +28,21 @@
             <input type="checkbox" id="search-toggle" />
             <span>検索</span>
           </label>
+          <div class="search-modes" id="search-modes">
+            <span class="search-modes__label">mode</span>
+            <label>
+              <input type="checkbox" name="search-mode" value="naive" />
+              naive
+            </label>
+            <label>
+              <input type="checkbox" name="search-mode" value="mini" />
+              mini
+            </label>
+            <label>
+              <input type="checkbox" name="search-mode" value="light" />
+              light
+            </label>
+          </div>
           <label class="top-k">
             top_k
             <input type="number" id="search-top-k" min="1" max="10" step="1" />
