Web検索トグル機能を追加し、MiniRAG検索トグルと独立して設定できるようにしました。関連する設定、UI、APIエンドポイントを更新し、Web検索結果をOpenRouterのユーザーコンテキストに注入する機能を実装しました。

--- a/services/avatar-ui/app/src/renderer/index.html
+++ b/services/avatar-ui/app/src/renderer/index.html
@@ -26,7 +26,11 @@
         <div class="diary-controls">
           <label class="toggle">
             <input type="checkbox" id="search-toggle" />
-            <span>検索</span>
+            <span>MiniRAG検索</span>
+          </label>
+          <label class="toggle">
+            <input type="checkbox" id="web-search-toggle" />
+            <span>Web検索</span>
           </label>
           <div class="search-modes" id="search-modes">
             <span class="search-modes__label">mode</span>
