Add reset button functionality to clear conversation history; implement server-side session reset endpoint and related logic.

--- a/services/avatar-ui/app/src/renderer/index.html
+++ b/services/avatar-ui/app/src/renderer/index.html
@@ -52,6 +52,7 @@
             <input type="number" id="search-top-k" min="1" max="10" step="1" />
           </label>
           <button type="button" id="finalize-button">会話確定</button>
+          <button type="button" id="reset-button">履歴リセット</button>
           <span class="finalize-status" id="finalize-status"></span>
         </div>
         <div class="input-row">
